--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
@@ -8,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
+    "react-native-paper": "^5.11.3",
     "react-native-vector-icons": "^10.0.2",
     "react-native-web": "^0.19.9"
   },
