--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.11.3",
     "react-native-vector-icons": "^10.0.2",
     "react-native-web": "^0.19.9"
